# gazebo_ins_analysis

./: CMakeLists.txt  InsCsvLogger.cpp  InsCsvLogger.h  LICENSE  README.md  gazebo_install_run.txt  main.cpp
ins_data_utilities/: __init__.py  angle_residuals.py  quaternion_utils.py  simulation_data_parser.py
ins_data_utilities/tests/: test_simulation_data_parser.py
ins_data_utilities/tests/test_data/: gnss.csv  imu.csv  true_pose_speed.csv
ins_samples/: constant_velocity_gnss_only.py  ins_ekf_16_states.py  requirements.txt  run_ins_ekf_16_states.py
ins_samples/test_data/: gnss.csv  imu.csv  true_pose_speed.csv
worlds/: loader_world.sdf
worlds/skid-loader-635/: model.config  skid-loader-635.sdf
worlds/skid-loader-635/blender/smurf/: skid-loader-635.smurf  skid-loader-635_materials.yml  skid-loader-635_sensors.yml
worlds/skid-loader-635/meshes/: Mesh.001.stl  Mesh.003.stl  Mesh.005.stl  Mesh.015.stl  Mesh.016.stl  Mesh.017.stl  Mesh.018.stl  Mesh.019.stl  Mesh.026.stl  Mesh.090.stl  Mesh.092.stl  Mesh.093.stl  Mesh.100.stl  Mesh.104.stl  Mesh.105.stl
